--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,16 @@ jobs:
 
         steps:
         - name: Checkout code
-          uses: actions/checkout@v2
+          uses: actions/checkout
 
         - name: Set up JDK 11
-          uses: actions/setup-java@v2
+          uses: actions/setup-java
           with:
             distribution: 'adopt'
             java-version: '11'
 
         - name: Cache Gradle packages
-          uses: actions/cache@v2
+          uses: actions/cache
           with:
             path: |
                 ~/.gradle/caches
@@ -30,7 +30,7 @@ jobs:
           run: ./gradlew build
 
         - name: Upload APK
-          uses: actions/upload-artifact@v2
+          uses: actions/upload-artifact
           with:
             name: app-apk
             path: app/build/outputs/apk/**/*.apk
