--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,16 @@ jobs:
 
         steps:
         - name: Checkout code
-          uses: actions/checkout@latest
+          uses: actions/checkout@v4
 
         - name: Set up JDK 11
-          uses: actions/setup-java@latest
+          uses: actions/setup-java@v4
           with:
             distribution: 'adopt'
             java-version: '11'
 
         - name: Cache Gradle packages
-          uses: actions/cache@latest
+          uses: actions/cache@v4
           with:
             path: |
                 ~/.gradle/caches
@@ -30,7 +30,7 @@ jobs:
           run: ./gradlew build
 
         - name: Upload APK
-          uses: actions/upload-artifact@latest
+          uses: actions/upload-artifact@v4
           with:
             name: app-apk
             path: app/build/outputs/apk/**/*.apk
