do not trigger on push of tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: Android CI
 
-on: [push, release]
+on:
+  push:
+    tags-ignore:
+      - '*'
+  release:
+    types: [created]
 
 jobs:
     build:
