--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,12 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: write
+  packages: write
+  issues: write
+  pull-requests: write
+  
 jobs:
     build:
         runs-on: ubuntu-latest
