--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ permissions:
   packages: write
   issues: write
   pull-requests: write
-  
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -64,6 +64,6 @@ jobs:
 
         - name: Upload Release APK
           run: |
-            gh release create ${{ github.ref }} app/build/outputs/apk/**/*.apk --title "Release ${{ github.ref }}" --notes "Automated release of the APK."
+            gh release upload ${{ github.ref }} app/build/outputs/apk/**/*.apk
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
